RESOLVED FIXED208241
REGRESSION(r257299): [GTK] Test fast/forms/menulist-restrict-line-height.html is failing since r257299
https://bugs.webkit.org/show_bug.cgi?id=208241
Summary REGRESSION(r257299): [GTK] Test fast/forms/menulist-restrict-line-height.html...
Carlos Garcia Campos
Reported 2020-02-26 05:54:37 PST
We should not honor line-height for styled combo buttons.
Attachments
Patch (2.54 KB, patch)
2020-02-26 06:01 PST, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2020-02-26 06:01:18 PST
Carlos Garcia Campos
Comment 2 2020-02-28 01:33:25 PST
Note You need to log in before you can comment on or make changes to this bug.