REGRESSION(r257299): [GTK] Test fast/forms/menulist-restrict-line-height.html is failing since r257299 https://bugs.webkit.org/show_bug.cgi?id=208241

Reviewed by Adrian Perez de Castro.

We should not honor line-height for styled combo buttons.

* rendering/RenderThemeAdwaita.cpp:
(WebCore::RenderThemeAdwaita::adjustMenuListStyle const):
(WebCore::RenderThemeAdwaita::adjustMenuListButtonStyle const):
* rendering/RenderThemeAdwaita.h:

Canonical link: https://commits.webkit.org/221297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257628 268f45cc-cd09-0410-ab3c-d52691b4dbfc