Source/WebCore/rendering/RenderThemeAdwaita.h
@@ -62,6 +62,8 @@ private:
     bool paintSearchField(const RenderObject&, const PaintInfo&, const IntRect&) final;
 
     bool popsMenuBySpaceOrReturn() const final { return true; }
+    void adjustMenuListStyle(RenderStyle&, const Element*) const;
+    void adjustMenuListButtonStyle(RenderStyle&, const Element*) const;
     LengthBox popupInternalPaddingBox(const RenderStyle&) const final;
     bool paintMenuList(const RenderObject&, const PaintInfo&, const FloatRect&) final;
     bool paintMenuListButtonDecorations(const RenderBox&, const PaintInfo&, const FloatRect&) final;
